--- a/index.html
+++ b/index.html
@@ -1,46 +1,337 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <title>Vidéos</title>
-    <meta charset="utf-8" />
-  </head>
-  <body>
-    <header>
-      <p>
-        <span id="videos-amount"></span>
-        <span id="total-duration"></span>
-        <span id="not-watched-amount"></span>
-        <span id="not-watched-duration"></span>
-      </p>
-      <br />
-      <section id="controls">
-        <label for="author-filter">Filtrer par auteur-ice</label>
-        <input type="text" id="author-filter" />
-        <label for="title-filter">Filtrer par titre</label>
-        <input type="text" id="title-filter" />
-        <label for="category-filter">Filtrer par catégorie(s)</label>
-        <select id="category-filter">
-          <option value="">Catégories</option>
-        </select>
-        <input type="checkbox" name="watched-filter" id="watched-filter" />
-        <label for="watched-filter">Ne montrer que les vidéos à regarder</label>
-      </section>
-    </header>
-    <table id="videos">
-      <thead id="table-headers">
-        <tr>
-          <th id="author-th">Auteur-ice</th>
-          <th id="title-th">Titre</th>
-          <th id="duration-th">Durée</th>
-          <th id="category-th">Catégories</th>
-        </tr>
-      </thead>
-      <tbody id="table-body"></tbody>
-    </table>
-  </body>
+<head>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <title>Vidéos</title>
+  <meta charset="utf-8" />
+</head>
 
-  <script defer src="./src/index.js" type="module"></script>
+<body>
+  <header>
+    <p>
+      <span id="videos-amount"></span>
+      <span id="total-duration"></span>
+      <span id="not-watched-amount"></span>
+      <span id="not-watched-duration"></span>
+    </p>
+    <br />
+    <section id="controls">
+      <label for="author-filter">Filtrer par auteur-ice</label>
+      <input type="text" id="author-filter" />
+      <label for="title-filter">Filtrer par titre</label>
+      <input type="text" id="title-filter" />
+      <label for="category-filter">Filtrer par catégorie(s)</label>
+      <select id="category-filter">
+        <option value="">Catégories</option>
+      </select>
+      <input type="checkbox" name="watched-filter" id="watched-filter" />
+      <label for="watched-filter">Ne montrer que les vidéos à regarder</label>
+    </section>
+  </header>
+  <table id="videos">
+    <thead id="table-headers">
+      <tr>
+        <th id="author-th">Auteur-ice</th>
+        <th id="title-th">Titre</th>
+        <th id="duration-th">Durée</th>
+        <th id="category-th">Catégories</th>
+      </tr>
+    </thead>
+    <tbody id="table-body"></tbody>
+  </table>
+</body>
 
-  <link rel="stylesheet" href="main.css" />
+<link rel="stylesheet" href="main.css" />
+
+<script defer>
+const videos = [
+	{
+		title: "Video title",
+		author: "Video author",
+		hours: 1,
+		minutes: 30,
+		category: 'Some category',
+		watched: true
+	},
+	{
+		title: "Another video title",
+		author: "The same video author",
+		hours: 2,
+		minutes: 45,
+		category: 'Some other category',
+		watched: false
+	},
+]
+
+const displayedVideos = structuredClone(videos);
+
+
+let totalDuration = 0;
+let leftoverMinutes = 0;
+
+let notWatchedDuration = 0;
+let notWatchedLeftoverMinutes = 0;
+
+function resetDurations() {
+  totalDuration = 0;
+  leftoverMinutes = 0;
+  notWatchedDuration = 0;
+  notWatchedLeftoverMinutes = 0;
+}
+
+function incrementTotalDuration(video) {
+  totalDuration += video.hours;
+  leftoverMinutes += video.minutes;
+  if (leftoverMinutes >= 60) {
+    totalDuration += 1;
+    leftoverMinutes -= 60;
+  }
+  if (!video.watched) {
+    notWatchedDuration += video.hours;
+    notWatchedLeftoverMinutes += video.minutes;
+    if (notWatchedLeftoverMinutes >= 60) {
+      notWatchedDuration += 1;
+      notWatchedLeftoverMinutes -= 60;
+    }
+  }
+}
+
+function updateTotalDuration(videos) {
+  resetDurations();
+  for (const video of videos) {
+    incrementTotalDuration(video);
+  }
+}
+
+function filterVideos(videos, authorFilterInput, titleFilterInput, categoryFilterInput, watchedVideosFilterCheckbox) {
+	return videos.filter(video => {
+		const containsAuthor = authorFilterInput.value === ''
+			|| video.author.toLowerCase().includes(authorFilterInput.value.toLowerCase());
+		const containsTitle = titleFilterInput.value === ''
+			|| video.title.toLowerCase().includes(titleFilterInput.value.toLowerCase());
+		const containsCategories = categoryFilterInput.value === ''
+			|| video.category === categoryFilterInput.value;
+		const displayWatchedVideoConditions = !(watchedVideosFilterCheckbox.checked && video.watched);
+		return containsAuthor && containsTitle && containsCategories && displayWatchedVideoConditions;
+	});
+}
+
+const selectCategoryElement = document.querySelector('#category-filter');
+const tableBody = document.querySelector('#table-body');
+
+const authorHeaderElement = document.querySelector('#author-th');
+const titleHeaderElement = document.querySelector('#title-th');
+const durationHeaderElement = document.querySelector("#duration-th");
+const categoryHeaderElement = document.querySelector('#category-th');
+
+const authorFilterInput = document.querySelector("#author-filter");
+const titleFilterInput = document.querySelector("#title-filter");
+const categoryFilterInput = document.querySelector("#category-filter");
+const watchedVideosFilterCheckbox = document.querySelector("#watched-filter");
+
+function fillHeaderInfos(videos) {
+	const videosAmountSpan = document.querySelector("#videos-amount");
+  videosAmountSpan.textContent = `Nombre total de vidéos: ${videos.length}.`;
+	
+  const durationSpan = document.querySelector("#total-duration");
+  durationSpan.textContent = `Durée totale: ${totalDuration} heures et ${leftoverMinutes} minutes.`;
+
+  const notWatchedAmountSpan = document.querySelector("#not-watched-amount");
+  notWatchedAmountSpan.textContent = `Nombre de vidéos restantes: ${
+		videos.filter((e) => e.watched === false).length
+  }.`;
+
+  const notWatchedDurationSpan = document.querySelector("#not-watched-duration");
+  notWatchedDurationSpan.textContent = `Durée restante: ${notWatchedDuration} heures et ${notWatchedLeftoverMinutes} minutes.`;
+}
+
+function fillSelectCategoryOptions(videos) {
+	const categories = Array.from(new Set(videos.flatMap(video => video.category)));
+	for(const category of categories) {
+		selectCategoryElement.innerHTML += `<option value=${category}>${category}</option>`;
+	}
+}
+
+function fillTableContent(videos) {
+	if (videos.length === 0) {
+    resetDurations();
+    return;
+  }
+	for(const video of videos) {
+		tableBody.innerHTML += `
+			<tr ${video.watched ? "class='watched-video'" : ""}>
+				<td>${video.author}</td>
+				<td>${video.title}</td>
+				<td>${video.hours}h${video.minutes}min</td>
+				<td>${video.category}</td>
+			</tr>
+		`;
+    incrementTotalDuration(video);
+	}
+}
+
+function resetTableHeaders() {
+	authorHeaderElement.textContent = "Auteur-ice";
+  titleHeaderElement.textContent = "Title";
+  durationHeaderElement.textContent = "Durée";
+  categoryHeaderElement.textContent = "Catégorie";
+}
+
+function resetTableBody() {
+	tableBody.innerHTML = "";
+}
+
+function displayArrow(element, arrow) {
+	element.innerHTML += ` ${arrow}`;
+}
+
+function addEventListeners(videos) {
+	for (const tableHeader of document.querySelectorAll("th")) {
+		tableHeader.addEventListener("click", () => {
+			const clickedFieldName = tableHeader.id.split("-")[0];
+
+			const currentOrder = getCurrentOrderStateOf(clickedFieldName);
+
+			// step 1: update current order state
+			updateCurrentOrderState(clickedFieldName);
+			
+			// step 2: reorder the videos
+			switch(clickedFieldName) {
+				case 'author':
+				case 'title':
+				case 'category': {
+					orderAlphabetically(videos, clickedFieldName, !currentOrder);
+					break;
+				}
+				case 'duration': {
+					orderByDuration(videos, !currentOrder);
+					break;
+				}
+			}
+
+			// step 4: refresh the html
+			resetTableHeaders();
+			resetTableBody();
+
+			const arrow = !currentOrder ? '&#8593;' : '&#8595;';
+			displayArrow(tableHeader, arrow);
+			fillTableContent(videos);
+		});
+	}
+	authorFilterInput.addEventListener("input", () => {
+		const filteredVideos = filterVideos(videos, authorFilterInput, titleFilterInput, categoryFilterInput, watchedVideosFilterCheckbox);
+		resetTableBody();
+		fillTableContent(filteredVideos);
+		updateTotalDuration(filteredVideos);
+		fillHeaderInfos(filteredVideos);
+	});
+	titleFilterInput.addEventListener("input", () => {
+		const filteredVideos = filterVideos(videos, authorFilterInput, titleFilterInput, categoryFilterInput, watchedVideosFilterCheckbox);
+		resetTableBody();
+		fillTableContent(filteredVideos);
+		updateTotalDuration(filteredVideos);
+		fillHeaderInfos(filteredVideos);
+	});
+	categoryFilterInput.addEventListener("change", () => {
+		const filteredVideos = filterVideos(videos, authorFilterInput, titleFilterInput, categoryFilterInput, watchedVideosFilterCheckbox);
+		resetTableBody();
+		fillTableContent(filteredVideos);
+		updateTotalDuration(filteredVideos);
+		fillHeaderInfos(filteredVideos);
+	});
+	watchedVideosFilterCheckbox.addEventListener("click", () => {
+		const filteredVideos = filterVideos(videos, authorFilterInput, titleFilterInput, categoryFilterInput, watchedVideosFilterCheckbox);
+		resetTableBody();
+		fillTableContent(filteredVideos);
+	});
+}
+
+const orderState = {
+	author: false,
+	title: false,
+	duration: false,
+	category: false
+};
+
+function resetOrderState() {
+	orderState.author = false;
+	orderState.title = false;
+	orderState.duration = false;
+	orderState.category = false;
+}
+
+function getCurrentOrderStateOf(fieldName) {
+	return orderState[fieldName];
+}
+
+function updateCurrentOrderState(fieldName) {
+	const value = orderState[fieldName];
+	resetOrderState();
+	orderState[fieldName] = !value;
+}
+
+function orderAlphabetically(videos, fieldName, isOrderAscending) {
+	videos.sort((a, b) => {
+    const valueOne = a[fieldName];
+    const valueTwo = b[fieldName];
+    if (isOrderAscending) {
+      if (valueOne > valueTwo) {
+        return 1;
+      } else if (valueOne > valueTwo) {
+        return -1;
+      }
+      return 0;
+    } else {
+      if (valueOne > valueTwo) {
+        return -1;
+      } else if (valueOne < valueTwo) {
+        return 1;
+      }
+      return 0;
+    }
+  });
+}
+
+function orderByDuration(videos, isOrderAscending) {
+	videos.sort((a, b) => {
+    const valueOne = { hours: a.hours, minutes: a.minutes };
+    const valueTwo = { hours: b.hours, minutes: b.minutes };
+    if (isOrderAscending) {
+      if (valueOne.hours > valueTwo.hours) {
+        return 1;
+      } else if (valueOne.hours < valueTwo.hours) {
+        return -1;
+      } else {
+        if (valueOne.minutes > valueTwo.minutes) {
+          return 1;
+        } else if (valueOne.minutes < valueTwo.minutes) {
+          return -1;
+        }
+      }
+      return 0;
+    } else {
+      if (valueOne.hours > valueTwo.hours) {
+        return -1;
+      } else if (valueOne.hours < valueTwo.hours) {
+        return 1;
+      } else {
+        if (valueOne.minutes > valueTwo.minutes) {
+          return -1;
+        } else if (valueOne.minutes < valueTwo.minutes) {
+          return 1;
+        }
+      }
+      return 0;
+    }
+  });
+}
+
+fillSelectCategoryOptions(displayedVideos);
+fillTableContent(displayedVideos);
+fillHeaderInfos(displayedVideos);
+
+addEventListeners(displayedVideos);
+
+console.log("called")
+</script>
 </html>
