--- a/index.html
+++ b/index.html
@@ -274,56 +274,18 @@ function orderAlphabetically(videos, fieldName, isOrderAscending) {
 	videos.sort((a, b) => {
     const valueOne = a[fieldName];
     const valueTwo = b[fieldName];
-    if (isOrderAscending) {
-      if (valueOne > valueTwo) {
-        return 1;
-      } else if (valueOne > valueTwo) {
-        return -1;
-      }
-      return 0;
-    } else {
-      if (valueOne > valueTwo) {
-        return -1;
-      } else if (valueOne < valueTwo) {
-        return 1;
-      }
-      return 0;
-    }
+		const sorting = isOrderAscending ? 1 : -1;
+	  return valueOne === valueTwo ? 0 : sorting;
   });
 }
 
 function orderByDuration(videos, isOrderAscending) {
 	videos.sort((a, b) => {
-    const valueOne = { hours: a.hours, minutes: a.minutes };
-    const valueTwo = { hours: b.hours, minutes: b.minutes };
-    if (isOrderAscending) {
-      if (valueOne.hours > valueTwo.hours) {
-        return 1;
-      } else if (valueOne.hours < valueTwo.hours) {
-        return -1;
-      } else {
-        if (valueOne.minutes > valueTwo.minutes) {
-          return 1;
-        } else if (valueOne.minutes < valueTwo.minutes) {
-          return -1;
-        }
-      }
-      return 0;
-    } else {
-      if (valueOne.hours > valueTwo.hours) {
-        return -1;
-      } else if (valueOne.hours < valueTwo.hours) {
-        return 1;
-      } else {
-        if (valueOne.minutes > valueTwo.minutes) {
-          return -1;
-        } else if (valueOne.minutes < valueTwo.minutes) {
-          return 1;
-        }
-      }
-      return 0;
-    }
-  });
+  	const valueOne = new Date(`2000-01-01 ${a.hours}:${a.minutes}`);
+		const valueTwo = new Date(`2000-01-01 ${b.hours}:${b.minutes}`);
+    const sorting = isOrderAscending ? 1 : -1;
+	  return valueOne === valueTwo ? 0 : sorting;
+	}
 }
 
 fillSelectCategoryOptions(displayedVideos);
